修改了细节

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         cal.Init('.box', {
                 
         })
-        cal.on_getdtae = function(res){
+        cal.on_getdate = function(res){
             console.log(res)
             cal.remove('.box')
         }
